fixed several issues in the LZ77SilesiaTest.java and made it more educational